feat: statistics video count
