# internal/delivery/rest/api/api.go
@@ -63,6 +63,7 @@ func (api *API) Register(r chi.Router, nrApp *newrelic.Application) {
 		r.Get("/statistics/vtubers/3d-modeler-count", api.handleGetVtuber3DModelerCount)
 		r.Get("/statistics/vtubers/average-video-count", api.handleGetVtuberAverageVideoCount)
 		r.Get("/statistics/vtubers/average-video-duration", api.handleGetVtuberAverageVideoDuration)
+		r.Get("/statistics/vtubers/video-count", api.handleGetVtuberVideoCount)
 
 		r.Get("/statistics/agencies/count", api.handleGetAgencyCount)
 	})
